--- a/pasta13/index.html
+++ b/pasta13/index.html
@@ -30,13 +30,13 @@
         
         if (hora >= 6 && hora < 12) {
             cor = "#FFD700"; // dourado manhã.
-            mensagem = "Bom dia!";
+            mensagem = "Bom dia!☀️​";
         } else if (hora >= 12 && hora < 23) {
             cor = "#FF8C00"; //laranja tarde
-            mensagem = "Boa tarde!";
+            mensagem = "Boa tarde!⛅";
         } else if (hora >= 18 && hora < 23) {
             cor = "#1E90FF"; // cinza escuro madrugada
-            mensagem = "Hora de descansar!";
+            mensagem = "Hora de descansar!​🌚";
         }
         // const opcoes = {
             //   weekday: "long",
